--- a/main.css
+++ b/main.css
@@ -31,13 +31,14 @@ body {
 .card-body {
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: white;
   border: none;
 }
 
 .card-text {
   margin: 0;
-  color: #fff;
+  color: black;
+  border: 1px solid red;
 }
 
 .card-body p {
@@ -47,4 +48,8 @@ body {
 .card-img-top {
   height: 20rem;
   object-fit: cover;
+}
+
+.addClass {
+  background-color: #B33A80;
 }
